--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,37 +1,87 @@
-<mat-toolbar color="primary">
-    <span>PIXIE</span>
-  </mat-toolbar>
+
+<div class="container bootstrap snippets bootdeys">
   <div>
-    <br>
-    <div  style="display: flex; flex-direction: row; ">
-      <div id="avatar"><img src="/src/assets/images/bot.jpg"/></div>
-    
-    <div>
-      <mat-card class="message-card"  *ngIf="messageIntro.sender && messageIntro.text" > 
-      <mat-card-content>
-        <p class="message">{{ messageIntro.text }}</p>
-   </mat-card-content>
-     
-   
-</mat-card></div>
-      <mat-card class="message-card" *ngFor="let message of messages"  > 
-     
-          <mat-card-header>
-              <mat-card-title class="sender-name">{{ message.sender }}</mat-card-title>
-          </mat-card-header>
-           <mat-card-content>
-               <p class="message">{{ message.text }}</p>
-          </mat-card-content>  
-     </mat-card>
-  </div>
-  <div class="input-container" fxLayout="row" fxLayoutAlign="center bottom">
-    <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <mat-label>Message</mat-label>
-          <input matInput [(ngModel)]="inputValue" name="userinput" placeholder="Enter value">
-        <button mat-button type="button" color="primary" (click)="sendUserMessage()">send</button>
-        </mat-form-field>
-      </form>
+    <!-- Panel Chat -->
+    <div class="panel" id="chat">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <i class="icon wb-chat-text" aria-hidden="true"></i> PIXIE
+        </h3>
+      </div>
+      
+        <div class="panel-body">
+          <div *ngIf="messageIntro.sender && messageIntro.text">
+          
+             <ng-container >
+            <div class="chat" >
+            
+              <div class="chat-avatar">
+                <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="right" title="" data-original-title="June Lane">
+                  <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="...">
+                  <i></i>
+                </a>
+              </div>
+              <div class="chat-body">
+                <div class="chat-content">
+                  <p>
+                   {{messageIntro.text}}
+                  </p>
+                  <time class="chat-time" datetime="2015-07-01T11:37">11:37:08 am</time>
+                </div>
+              </div>
+            </div>
+            </ng-container>
+            <div *ngFor="let message of messages">
+              <ng-container *ngIf="message.sender === 'Chatbot'">
+                <div class="chat">
+                
+                  <div class="chat-avatar">
+                    <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="Edward Fletcher">
+                      <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="...">
+                      <i></i>
+                    </a>
+                  </div>
+                  <div class="chat-body">
+                    <div class="chat-content">
+                      <p>{{message.text}}</p>
+                      <time class="chat-time" datetime="2015-07-01T11:39">11:39:57 am</time>
+                    </div>
+                  </div>
+                </div>
+              </ng-container>
+            <ng-container *ngIf="message.sender === 'User'">
+              <div class="chat chat-left">
+              
+                <div class="chat-avatar">
+                  <a class="avatar avatar-online" data-toggle="tooltip" href="#" data-placement="left" title="" data-original-title="Edward Fletcher">
+                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="...">
+                    <i></i>
+                  </a>
+                </div>
+                <div class="chat-body">
+                  <div class="chat-content">
+                    <p>{{message.text}}</p>
+                    <time class="chat-time" datetime="2015-07-01T11:39">11:39:57 am</time>
+                  </div>
+                </div>
+              </div>
+            </ng-container>
+            </div>
+            
+          </div>
+          <div class="panel-footer">
+            <form>
+              <div class="input-group">
+                <input [(ngModel)]="inputValue" name="userinput" type="text" class="form-control" placeholder="Say something">
+                <span class="input-group-btn">
+                  <button   class="btn btn-primary" type="button" (keydown)="sendUserMessage()" (click)="sendUserMessage()">Send</button>
+                </span>
+              </div>
+            </form>
+          </div>
+        </div>
+      
     </div>
+    <!-- End Panel Chat -->
   </div>
-    
+  </div>
