--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -84,7 +84,7 @@
   height: 650px;
   overflow-y: scroll;
   width: 100%; 
-  background-color: #dfe9ef;
+  background-color: teal
 
   }
   
@@ -134,6 +134,7 @@
       margin-top: 0
   }
   
+  /**for chat bot*/
   .chat-content {
       position: relative;
       display: block;
@@ -170,7 +171,7 @@
   .chat-time {
       display: block;
       margin-top: 8px;
-      color: rgba(255, 255, 255, .6)
+      color: black
   }
   
   .chat-left .chat-avatar {
@@ -185,8 +186,8 @@
   .chat-left .chat-content {
       float: right;
       margin: 0 0 10px 20px;
-      color: #76838f;
-      background-color: #dfe9ef
+      color: black;
+      background-color: white;
   }
   
   .chat-left .chat-content:before {
@@ -201,20 +202,16 @@
   }
   
   .chat-left .chat-time {
-      color: #a3afb7
+      color: black;
+  }
+  @media (max-width: 767px) {
+    .panel-footer {
+      flex-direction: column;
+   
+ }
+   
   }
   
-  .panel-footer {
-      padding: 0 30px 44px;
-      position: fixed;
-      bottom: 0;
-      width: 80%;
-      
-      background-color: transparent;
-      border-top: 1px solid transparent;
-      border-bottom-right-radius: 3px;
-      border-bottom-left-radius: 3px;
-  }
   .avatar img {
       width: 100%;
       max-width: 100%;
@@ -233,3 +230,25 @@
       border-radius: 1000px;
       vertical-align: bottom;
   }
+  .options-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .option {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  input[type="radio"] {
+    margin-right: 10px;
+  }
+  /* .layout{
+    background-image: url("../../assets/images/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 810px;
+  } */
