quiz questions displaying remaining question

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -6,6 +6,10 @@
         <div class="panel-heading">
           <h3 class="panel-title">
             <i class="icon wb-chat-text" aria-hidden="true"></i> PIXIE
+            <!-- <button style="float: right" routerLink="/prequiz">Take quiz</button> -->
+            <button style="float: right" (click)="navigateToAbout()">Go to About page</button>
+          
+            
           </h3>
         </div>
   
