--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-chat></app-chat>
+<div>
+    <!-- <app-chat></app-chat> -->
+    <!-- <app-pre-quiz></app-pre-quiz> -->
+    <router-outlet></router-outlet>
+  
+</div>
