created new home login logout fucntion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
-    <!-- <app-chat></app-chat> -->
-    <!-- <app-pre-quiz></app-pre-quiz> -->
-    <router-outlet></router-outlet>
+   <app-navbar></app-navbar>
+   <div>
+  <router-outlet></router-outlet>
+  
+   </div>
   
 </div>
