--- a/src/app/pre-quiz/pre-quiz.component.css
+++ b/src/app/pre-quiz/pre-quiz.component.css
@@ -182,6 +182,12 @@ input[type=radio]:checked ~ .option {
   .modal-button-container button:hover {
     background-color: #2E8B57;
   }
+  #display-question {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+  }
 
 /* .modal-container{
     display: flex;
