--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,20 @@
-<div>
+<!-- <div>
    <app-navbar></app-navbar>
    <div>
+      <app-register></app-register>
   <router-outlet></router-outlet>
   
-   </div>
+   </div>-->
   
-</div>
+
+ <nav class="navbar navbar-dark bg-dark d-flex justify-content-center">
+  <ng-container *ngIf="(isAuthenticated$ | async) === false; else signout">
+    <button class="btn btn-primary " (click)="signIn()"> Sign in </button>
+  </ng-container>
+  
+  <ng-template #signout>
+    <button class="btn btn-primary " (click)="signOut()">Sign out</button>
+  </ng-template>
+  </nav>
+ 
+ <router-outlet></router-outlet>
