--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,4 +1,5 @@
-.navbar {
+@media screen and (max-width: 768px) {
+  .navbar {
     background-color: black;
     color: white;
     padding: 10px;
@@ -46,5 +47,7 @@
   }
   
   
+}
+
   
   
