--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-dark bg-dark d-flex justify-content-center">
-    <button class="btn btn-primary mx-2" routerLink="/login">Sign In</button>
-    <button class="btn btn-secondary mx-2" routerLink="/register">Registration</button>
-    <button class="btn btn-primary mx-2" *ngIf="authenticated" routerLink="/logout">Logout</button>
+  <ng-container *ngIf="(isAuthenticated$ | async) === false; else signout">
+    <button (click)="signIn()"> Sign in </button>
+  </ng-container>
+  
+  <ng-template #signout>
+    <button (click)="signOut()">Sign out</button>
+  </ng-template>
   </nav>
  
