--- a/src/app/pre-quiz/pre-quiz.component.html
+++ b/src/app/pre-quiz/pre-quiz.component.html
@@ -1,18 +1,20 @@
  <!-- creating a modal for when quiz ends -->
+
  <div class="modal-container" *ngIf="showModal">
+  
     <div class="modal-content-container">
       <h1>Congratulations, Quiz Completed.</h1>
   
       <div class="grade-details">
-        <p>Attempts:</p>
-        <p>Wrong Answers: </p>
-        <p>Right Answers: </p>
-        <p>Grade: %</p>
-        <p> remarks </p>
+        <p>Wrong Answers:{{answeredWrongly}} </p>
+        <p>Right Answers: {{answeredCorrectly}} </p>
+        <p>Unanswered: {{unanswered}}</p>
+        <p>Time Taken: {{resultTime}} </p>
+        <p>Points: {{points}}</p>
       </div>
   
       <div class="modal-button-container">
-        <button >Continue</button>
+        <button (click)="navigateToAbout()" >Continue</button>
       </div>
     </div>
   </div>
@@ -29,7 +31,7 @@
     
 
     <div class="game-question-container">
-        <h1 id="display-question">{{question}}</h1>
+        <h1 id="display-question" >{{question}}</h1>
     </div>
 
     <div class="game-options-container">
@@ -46,20 +48,14 @@
             </div>
 
        </div>
-       <span *ngFor="let option of options; let i = index">
-        <input #optionInput type="radio" name="selectedOption" [value]="option" (click)="selectOption(optionInput.value)" />
-        <!-- <label [ngClass]="{'green': , 'red': selectedOption === option && !isOptionCorrect(option)}">{{option}}</label> -->
+      <span *ngFor="let option of options; let i = index">
+        <input type="radio" name="selectedOption" [id]="'option'+i" [value]="option" (change)="onOptionSelected(i)" />
+        <label [ngClass]="{'correct': selectedOptionIndex === i && selectedOptionClass === 'correct', 'wrong': selectedOptionIndex === i && selectedOptionClass === 'wrong'}" [for]="'option'+i">{{option}}</label>
       </span>
-       <!-- <span *ngFor="let option of options; let i = index">
-        <input (click)="selectOption(option)" type="radio" name="selectedOption" [(ngModel)]="selectedOption" [value]="option" />
-        <label>{{option}}</label>
-      </span> -->
-
-
     </div>
 
-    <div class="next-button-container">
+    <!-- <div class="next-button-container">
         <button (click)="handleNextQuestion()">Next Question</button>
-    </div>
+    </div> -->
 
 </div></main>
