--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="container" *ngIf="name$ | async as name" >
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <div class="card my-5">
             <h1 style="text-align: center;">Register</h1>
-          <form [formGroup]="form"   class="card-body cardbody-color p-lg-5" (submit)="submit()">
+          
+          <form    class="card-body cardbody-color p-lg-5" >
 
             
 
