--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <hr class="my-4">
             <h3 class="display-4">Instructions on the quiz</h3>
             <ul class="list-unstyled">
-              
+            
               <li>There are a set of 8 questions and each questions will be having four options to chose from.</li>
               <li>All the questions are timed to 60 seconds</li>
               <li>If you dont Answere a question you will move on to the next question automatically</li>
@@ -35,13 +35,14 @@
             <hr class="my-4">
             <h3 class="display-4">Heads Up!!!</h3>
             <ul class="list-unstyled">
-              
+             
               <li>First you will be directed to a quiz where you will be asked questions about a programming language called Javascript which you will be taking before conversation with Chatbot.</li>
               <li>Relax! You dont need to be a Computer Science genius to take this quiz. Even if you dont know the answere just take a guess.Or even if you score less, Doesnt matter to us.</li>
               <li>You need to Login/Signup to take the quiz.</li>
               <li>After taking the pre-quiz you have will a small chat with Robbie who will teach you about Javascript. </li>
               <li>Then you will have the same test again to see if you have improved in your score or not.</li>
               <li> Remember this is just a study/experiment being conducted and not a test on you programming abilities.  </li>
+              <li><h4>Do not close this browser after login!! You will lose all you data</h4></li>
             </ul>
             
         </div>
