--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -189,6 +189,10 @@
       color: black;
       background-color: white;
   }
+  img.animated-gif{
+    width: 200px;
+    height: auto;
+  }
   
   .chat-left .chat-content:before {
       right: auto;
