--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,1 +1,207 @@
-<h1><p>feedback works!</p></h1>
+<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42013" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42013" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42013" type="text/javascript"></script>
+<script
+    type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/ JotForm.alterTexts(undefined); /*INIT-END*/ }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]); setTimeout(function () {
+            JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]);
+        }, 20); </script>
+<style type="text/css">
+    @media print {
+        .form-section {
+            display: inline !important
+        }
+
+        .form-pagebreak {
+            display: none !important
+        }
+
+        .form-section-closed {
+            height: auto !important
+        }
+
+        .page-section {
+            position: initial !important
+        }
+    }
+</style>
+<link type="text/css" rel="stylesheet"
+    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42013" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42013" />
+<link type="text/css" rel="stylesheet"
+    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42013" />
+<form class="jotform-form" ngNoForm action="https://eu-submit.jotform.com/submit/231326555393054" method="post"
+    name="form_231326555393054" id="231326555393054" accept-charset="utf-8" autocomplete="on"><input type="hidden"
+        name="formID" value="231326555393054" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden"
+        id="cardinalOrderNumber" value="" />
+    <div role="main" class="form-all">
+        <ul class="form-section page-section">
+            <li id="cid_1" class="form-input-wide" data-type="control_head">
+                <div class="form-header-group header-large">
+                    <div class="header-text httal htvam">
+                        <h1 id="header_1" class="form-header" data-component="header">Quiz Experience</h1>
+                        <div id="subHeader_1" class="form-subHeader">Take a small survey on the quiz you just took</div>
+                    </div>
+                </div>
+            </li>
+            <li class="form-line" data-type="control_matrix" id="id_3"><label
+                    class="form-label form-label-top form-label-auto" id="label_3" for="input_3"> </label>
+                <div id="cid_3" class="form-input-wide" data-layout="full">
+                    <table summary="" aria-labelledby="label_3" cellPadding="4" cellSpacing="0"
+                        class="form-matrix-table" data-component="matrix">
+                        <tr class="form-matrix-tr form-matrix-header-tr">
+                            <th class="form-matrix-th" style="border:none"> </th>
+                            <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_0">
+                                <label id="label_3_col_0">Strongly Disagree</label></th>
+                            <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_1">
+                                <label id="label_3_col_1">Disagree</label></th>
+                            <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_2">
+                                <label id="label_3_col_2">Neutral</label></th>
+                            <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_3">
+                                <label id="label_3_col_3">Agree</label></th>
+                            <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_4">
+                                <label id="label_3_col_4">Strongly Agree</label></th>
+                        </tr>
+                        <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_0">
+                            <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
+                                    id="label_3_row_0">I was able to track my achievement progress after the gamified
+                                    quiz activity</label></th>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_0_0" class="form-radio"
+                                    name="q3_typeA[0]" value="Strongly Disagree"
+                                    aria-labelledby="label_3_col_0 label_3_row_0"
+                                    aria-label="Cells Radio Button" /><label for="input_3_0_0"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_0_1" class="form-radio"
+                                    name="q3_typeA[0]" value="Disagree" aria-labelledby="label_3_col_1 label_3_row_0"
+                                    aria-label="Cells Radio Button" /><label for="input_3_0_1"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_0_2" class="form-radio"
+                                    name="q3_typeA[0]" value="Neutral" aria-labelledby="label_3_col_2 label_3_row_0"
+                                    aria-label="Cells Radio Button" /><label for="input_3_0_2"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_0_3" class="form-radio"
+                                    name="q3_typeA[0]" value="Agree" aria-labelledby="label_3_col_3 label_3_row_0"
+                                    aria-label="Cells Radio Button" /><label for="input_3_0_3"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_0_4" class="form-radio"
+                                    name="q3_typeA[0]" value="Strongly Agree"
+                                    aria-labelledby="label_3_col_4 label_3_row_0"
+                                    aria-label="Cells Radio Button" /><label for="input_3_0_4"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                        </tr>
+                        <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_1">
+                            <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
+                                    id="label_3_row_1">Gamified e-quizzes were a form of friendly competition</label>
+                            </th>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_1_0" class="form-radio"
+                                    name="q3_typeA[1]" value="Strongly Disagree"
+                                    aria-labelledby="label_3_col_0 label_3_row_1"
+                                    aria-label="Cells Radio Button" /><label for="input_3_1_0"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_1_1" class="form-radio"
+                                    name="q3_typeA[1]" value="Disagree" aria-labelledby="label_3_col_1 label_3_row_1"
+                                    aria-label="Cells Radio Button" /><label for="input_3_1_1"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_1_2" class="form-radio"
+                                    name="q3_typeA[1]" value="Neutral" aria-labelledby="label_3_col_2 label_3_row_1"
+                                    aria-label="Cells Radio Button" /><label for="input_3_1_2"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_1_3" class="form-radio"
+                                    name="q3_typeA[1]" value="Agree" aria-labelledby="label_3_col_3 label_3_row_1"
+                                    aria-label="Cells Radio Button" /><label for="input_3_1_3"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_1_4" class="form-radio"
+                                    name="q3_typeA[1]" value="Strongly Agree"
+                                    aria-labelledby="label_3_col_4 label_3_row_1"
+                                    aria-label="Cells Radio Button" /><label for="input_3_1_4"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                        </tr>
+                        <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_2">
+                            <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
+                                    id="label_3_row_2">I was able to remember the knowledge I gained from the gamified
+                                    quiz work</label></th>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_2_0" class="form-radio"
+                                    name="q3_typeA[2]" value="Strongly Disagree"
+                                    aria-labelledby="label_3_col_0 label_3_row_2"
+                                    aria-label="Cells Radio Button" /><label for="input_3_2_0"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_2_1" class="form-radio"
+                                    name="q3_typeA[2]" value="Disagree" aria-labelledby="label_3_col_1 label_3_row_2"
+                                    aria-label="Cells Radio Button" /><label for="input_3_2_1"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_2_2" class="form-radio"
+                                    name="q3_typeA[2]" value="Neutral" aria-labelledby="label_3_col_2 label_3_row_2"
+                                    aria-label="Cells Radio Button" /><label for="input_3_2_2"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_2_3" class="form-radio"
+                                    name="q3_typeA[2]" value="Agree" aria-labelledby="label_3_col_3 label_3_row_2"
+                                    aria-label="Cells Radio Button" /><label for="input_3_2_3"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_2_4" class="form-radio"
+                                    name="q3_typeA[2]" value="Strongly Agree"
+                                    aria-labelledby="label_3_col_4 label_3_row_2"
+                                    aria-label="Cells Radio Button" /><label for="input_3_2_4"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                        </tr>
+                        <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_3">
+                            <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
+                                    id="label_3_row_3">This activity helped me to improve my Javascript skills through
+                                    various types<br />of quiz questions related to it</label></th>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_3_0" class="form-radio"
+                                    name="q3_typeA[3]" value="Strongly Disagree"
+                                    aria-labelledby="label_3_col_0 label_3_row_3"
+                                    aria-label="Cells Radio Button" /><label for="input_3_3_0"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_3_1" class="form-radio"
+                                    name="q3_typeA[3]" value="Disagree" aria-labelledby="label_3_col_1 label_3_row_3"
+                                    aria-label="Cells Radio Button" /><label for="input_3_3_1"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_3_2" class="form-radio"
+                                    name="q3_typeA[3]" value="Neutral" aria-labelledby="label_3_col_2 label_3_row_3"
+                                    aria-label="Cells Radio Button" /><label for="input_3_3_2"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_3_3" class="form-radio"
+                                    name="q3_typeA[3]" value="Agree" aria-labelledby="label_3_col_3 label_3_row_3"
+                                    aria-label="Cells Radio Button" /><label for="input_3_3_3"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                            <td class="form-matrix-values"><input type="radio" id="input_3_3_4" class="form-radio"
+                                    name="q3_typeA[3]" value="Strongly Agree"
+                                    aria-labelledby="label_3_col_4 label_3_row_3"
+                                    aria-label="Cells Radio Button" /><label for="input_3_3_4"
+                                    class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+                        </tr>
+                    </table>
+                </div>
+            </li>
+            <li class="form-line" data-type="control_button" id="id_2">
+                <div id="cid_2" class="form-input-wide" data-layout="full">
+                    <div data-align="auto" class="form-buttons-wrapper form-buttons-auto jsTest-button-wrapperField">
+                        <button id="input_2" type="submit"
+                            class="form-submit-button submit-button jf-form-buttons jsTest-submitField"
+                            data-component="button" data-content="">Submit</button></div>
+                </div>
+            </li>
+            <li style="display:none">Should be Empty: <input type="text" name="website" value="" /></li>
+        </ul>
+    </div>
+    <script> JotForm.showJotFormPowered = "new_footer"; </script>
+    <script> JotForm.poweredByText = "Powered by Jotform"; </script><input type="hidden" class="simple_spc"
+        id="simple_spc" name="simple_spc" value="231326555393054" />
+    <script
+        type="text/javascript"> var all_spc = document.querySelectorAll("form[id='231326555393054'] .si" + "mple" + "_spc"); for (var i = 0; i < all_spc.length; i++) { all_spc[i].value = "231326555393054-231326555393054"; } </script>
+    <div class="formFooter-heightMask"></div>
+    <!-- <div class="formFooter f6 branding21">
+        <div class="formFooter-wrapper formFooter-leftSide"><a
+                href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
+                target="_blank" class="formFooter-logoLink"><img class="formFooter-logo"
+                    src="https://cdn.jotfor.ms/assets/img/logo2021/jotform-logo-white.svg" alt="Jotform Logo"
+                    style="height: 44px;"></a></div>
+        <div class="formFooter-wrapper formFooter-rightSide"><span class="formFooter-text">Now create your own Jotform -
+                It's free!</span><a class="formFooter-button"
+                href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
+                target="_blank">Create your own Jotform</a></div>
+    </div> -->
+</form>
+<script type="text/javascript">JotForm.ownerView = true;</script>
+<script type="text/javascript">JotForm.forwardToEu = true;</script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42013"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42013"></script>
