--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,14 @@
-.overlay {
-  background-color: rgba(0, 0, 0, 0.2); /* semi-transparent black overlay */
+/* .overlay {
+  background-color:grey; 
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
+} */
 
 .container {
+  background-color: teal;
   position: relative;
   z-index: 1; /* make sure the text is on top of the overlay */
 }
