--- a/src/app/pre-quiz/pre-quiz.component.html
+++ b/src/app/pre-quiz/pre-quiz.component.html
@@ -12,8 +12,8 @@
     </div>
 
     <div class="modal-button-container">
-      <p>Why dont you try learning Javascript from a chatbot Robbie! See if that improves the score</p>
-      <button (click)="navigateToChatbot()" >Try Robbie</button>
+      <p>Please fill out a small survey on the quiz you just Completed</p>
+      <button (click)="navigateToChatbot()" >Survey</button>
     </div>
   </div>
 </div>
