--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,6 +1,6 @@
-<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42013" type="text/javascript"></script>
-<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42013" type="text/javascript"></script>
-<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42013" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42107" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42107" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42107" type="text/javascript"></script>
 <script
     type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/ JotForm.alterTexts(undefined); /*INIT-END*/ }); JotForm.prepareCalculationsOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]); setTimeout(function () {
             JotForm.paymentExtrasOnTheFly([null, { "name": "heading", "qid": "1", "text": "Quiz Experience", "type": "control_head" }, { "name": "submit2", "qid": "2", "text": "Submit", "type": "control_button" }, { "description": "", "name": "typeA", "qid": "3", "text": "", "type": "control_matrix" }]);
@@ -25,10 +25,10 @@
     }
 </style>
 <link type="text/css" rel="stylesheet"
-    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42013" />
-<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42013" />
+    href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42107" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42107" />
 <link type="text/css" rel="stylesheet"
-    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42013" />
+    href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42107" />
 <form class="jotform-form" ngNoForm action="https://eu-submit.jotform.com/submit/231326555393054" method="post"
     name="form_231326555393054" id="231326555393054" accept-charset="utf-8" autocomplete="on"><input type="hidden"
         name="formID" value="231326555393054" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden"
@@ -189,7 +189,7 @@
     <script
         type="text/javascript"> var all_spc = document.querySelectorAll("form[id='231326555393054'] .si" + "mple" + "_spc"); for (var i = 0; i < all_spc.length; i++) { all_spc[i].value = "231326555393054-231326555393054"; } </script>
     <div class="formFooter-heightMask"></div>
-    <!-- <div class="formFooter f6 branding21">
+    <div class="formFooter f6 branding21">
         <div class="formFooter-wrapper formFooter-leftSide"><a
                 href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
                 target="_blank" class="formFooter-logoLink"><img class="formFooter-logo"
@@ -199,9 +199,9 @@
                 It's free!</span><a class="formFooter-button"
                 href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231326555393054&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
                 target="_blank">Create your own Jotform</a></div>
-    </div> -->
+    </div>
 </form>
 <script type="text/javascript">JotForm.ownerView = true;</script>
 <script type="text/javascript">JotForm.forwardToEu = true;</script>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42013"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42013"></script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42107"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42107"></script>
