--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
             <hr class="my-4">
             <h3 class="display-4">Heads Up!!!</h3>
             <ul class="list-unstyled">
-             <p>Take part in our study to determine if chatbots improve learning outcomes. You'll start by taking a quiz on Javascript before chatting with ScriptBuddy, our chatbot. Don't worry if you don't know the answers – just do your best! After chatting with Robbie, you'll take the same quiz again to see if your score improves. Please note that this is an experiment, not a test of your programming abilities. Sign up/login to begin the quiz!</p>
+             <p>Take part in our study to determine if chatbots improve learning outcomes. You'll start by taking a quiz on Javascript before chatting with ScriptBuddy, our chatbot. Don't worry if you don't know the answers – just do your best! After chatting with  ScriptBuddy, you'll take the same quiz again to see if your score improves. Please note that this is an experiment, not a test of your programming abilities. Sign up/login to begin the quiz!</p>
               <li><h4>Do not close this browser after login!! You will lose all you data</h4></li>
             </ul>
             
