--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -78,7 +78,7 @@
                             </ng-container>
                             <ng-container *ngIf="prequiz">
                             
-                              <p>Take the <a routerLink="/postquiz">quiz</a>again</p>
+                              <p>Click here to take the <a routerLink="/postquiz">quiz</a>again</p>
                             </ng-container>
                             
                             <time class="chat-time" datetime="2015-07-01T11:39">{{time}}</time>
