--- a/src/app/postfeedback/postfeedback.component.html
+++ b/src/app/postfeedback/postfeedback.component.html
@@ -1,6 +1,6 @@
-<script src="https://cdn01.jotfor.ms/static/prototype.forms.js?3.3.42705" type="text/javascript"></script>
-<script src="https://cdn02.jotfor.ms/static/jotform.forms.js?3.3.42705" type="text/javascript"></script>
-<script src="https://cdn03.jotfor.ms/js/payments/validategateways.js?v=3.3.42705" type="text/javascript"></script>
+<script src="https://cdn02.jotfor.ms/static/prototype.forms.js?3.3.42918" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.42918" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/js/payments/validategateways.js?v=3.3.42918" type="text/javascript"></script>
 <script
   type="text/javascript">	JotForm.newDefaultTheme = true; JotForm.extendsNewTheme = false; JotForm.singleProduct = false; JotForm.newPaymentUIForNewCreatedForms = true; JotForm.newPaymentUI = true; JotForm.clearFieldOnHide = "disable"; JotForm.submitError = "jumpToFirstError"; JotForm.init(function () { /*INIT-START*/
       if (window.JotForm && JotForm.accessible) $('input_5').setAttribute('tabindex', 0);
@@ -29,10 +29,11 @@
   }
 </style>
 <link type="text/css" rel="stylesheet"
-  href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42705" />
-<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42705" />
+  href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.42918" />
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.42918" />
 <link type="text/css" rel="stylesheet"
-  href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42705" />
+  href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.42918" />
+<link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/stylebuilder/donationBox.css?v=3.3.42918">
 <style type="text/css" id="form-designer-style">
   /* Injected CSS Code */
   /*PREFERENCES STYLE*/
@@ -214,10 +215,12 @@
                   id="label_3_col_2">Agree</label></th>
               <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_3"><label
                   id="label_3_col_3">Strongly Agree</label></th>
+              <th scope="col" class="form-matrix-headers form-matrix-column-headers form-matrix-column_4"><label
+                  id="label_3_col_4">Neutral</label></th>
             </tr>
             <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_0">
-              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label id="label_3_row_0">Service
-                  Quality</label></th>
+              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label id="label_3_row_0">I was able
+                  to track my achievement progress after the gamified quiz activity</label></th>
               <td class="form-matrix-values"><input type="radio" id="input_3_0_0" class="form-radio" name="q3_typeA[0]"
                   value="Strongly Disagree" aria-labelledby="label_3_col_0 label_3_row_0"
                   aria-label="Cells Radio Button" /><label for="input_3_0_0"
@@ -233,10 +236,13 @@
                   value="Strongly Agree" aria-labelledby="label_3_col_3 label_3_row_0"
                   aria-label="Cells Radio Button" /><label for="input_3_0_3"
                   class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+              <td class="form-matrix-values"><input type="radio" id="input_3_0_4" class="form-radio" name="q3_typeA[0]"
+                  value="Neutral" aria-labelledby="label_3_col_4 label_3_row_0" aria-label="Cells Radio Button" /><label
+                  for="input_3_0_4" class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
             </tr>
             <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_1">
-              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
-                  id="label_3_row_1">Cleanliness</label></th>
+              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label id="label_3_row_1">Gamified
+                  e-quizzes were a form of friendlier competition</label></th>
               <td class="form-matrix-values"><input type="radio" id="input_3_1_0" class="form-radio" name="q3_typeA[1]"
                   value="Strongly Disagree" aria-labelledby="label_3_col_0 label_3_row_1"
                   aria-label="Cells Radio Button" /><label for="input_3_1_0"
@@ -252,10 +258,13 @@
                   value="Strongly Agree" aria-labelledby="label_3_col_3 label_3_row_1"
                   aria-label="Cells Radio Button" /><label for="input_3_1_3"
                   class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+              <td class="form-matrix-values"><input type="radio" id="input_3_1_4" class="form-radio" name="q3_typeA[1]"
+                  value="Neutral" aria-labelledby="label_3_col_4 label_3_row_1" aria-label="Cells Radio Button" /><label
+                  for="input_3_1_4" class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
             </tr>
             <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_2">
-              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
-                  id="label_3_row_2">Responsiveness</label></th>
+              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label id="label_3_row_2">I was able
+                  to remember the knowledge I gained from the gamified quiz work</label></th>
               <td class="form-matrix-values"><input type="radio" id="input_3_2_0" class="form-radio" name="q3_typeA[2]"
                   value="Strongly Disagree" aria-labelledby="label_3_col_0 label_3_row_2"
                   aria-label="Cells Radio Button" /><label for="input_3_2_0"
@@ -271,10 +280,14 @@
                   value="Strongly Agree" aria-labelledby="label_3_col_3 label_3_row_2"
                   aria-label="Cells Radio Button" /><label for="input_3_2_3"
                   class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+              <td class="form-matrix-values"><input type="radio" id="input_3_2_4" class="form-radio" name="q3_typeA[2]"
+                  value="Neutral" aria-labelledby="label_3_col_4 label_3_row_2" aria-label="Cells Radio Button" /><label
+                  for="input_3_2_4" class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
             </tr>
             <tr class="form-matrix-tr form-matrix-value-tr" aria-labelledby="label_3 label_3_row_3">
-              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label
-                  id="label_3_row_3">Friendliness</label></th>
+              <th scope="row" class="form-matrix-headers form-matrix-row-headers"><label id="label_3_row_3">This
+                  activity helped me to improve my JavaScript skills through various types<br />of quiz questions
+                  related to it</label></th>
               <td class="form-matrix-values"><input type="radio" id="input_3_3_0" class="form-radio" name="q3_typeA[3]"
                   value="Strongly Disagree" aria-labelledby="label_3_col_0 label_3_row_3"
                   aria-label="Cells Radio Button" /><label for="input_3_3_0"
@@ -290,6 +303,9 @@
                   value="Strongly Agree" aria-labelledby="label_3_col_3 label_3_row_3"
                   aria-label="Cells Radio Button" /><label for="input_3_3_3"
                   class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
+              <td class="form-matrix-values"><input type="radio" id="input_3_3_4" class="form-radio" name="q3_typeA[3]"
+                  value="Neutral" aria-labelledby="label_3_col_4 label_3_row_3" aria-label="Cells Radio Button" /><label
+                  for="input_3_3_4" class="matrix-choice-label matrix-radio-label" aria-hidden="true"></label></td>
             </tr>
           </table>
         </div>
@@ -608,9 +624,19 @@
   <script
     type="text/javascript"> var all_spc = document.querySelectorAll("form[id='231632699705060'] .si" + "mple" + "_spc"); for (var i = 0; i < all_spc.length; i++) { all_spc[i].value = "231632699705060-231632699705060"; } </script>
   <div class="formFooter-heightMask"></div>
- 
+  <div class="formFooter f6 branding21">
+    <div class="formFooter-wrapper formFooter-leftSide"><a
+        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231632699705060&utm_content=jotform_logo&utm_campaign=powered_by_jotform_le"
+        target="_blank" class="formFooter-logoLink"><img class="formFooter-logo"
+          src="https://cdn.jotfor.ms/assets/img/logo2021/jotform-logo-white.svg" alt="Jotform Logo"
+          style="height: 44px;"></a></div>
+    <div class="formFooter-wrapper formFooter-rightSide"><span class="formFooter-text">Now create your own Jotform -
+        It's free!</span><a class="formFooter-button"
+        href="https://www.jotform.com/?utm_source=formfooter&utm_medium=banner&utm_term=231632699705060&utm_content=jotform_button&utm_campaign=powered_by_jotform_le"
+        target="_blank">Create your own Jotform</a></div>
+  </div>
 </form>
 <script type="text/javascript">JotForm.ownerView = true;</script>
 <script type="text/javascript">JotForm.forwardToEu = true;</script>
-<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42705"></script>
-<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42705"></script>
+<script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.42918"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.42918"></script>
